# FileProcessor

./: CMakeLists.txt  README.md  test.tst
include/: file_processor.h
src/: file_processor.cpp  main.cpp
tests/: CMakeLists.txt  test_file_processor.cpp
